--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">room practice with mvvm and coroutines</string>
+    <string name="app_name">NoteNest</string>
 </resources>
